# wewearv2-backend

./: LICENSE  README.md  pyproject.toml
backend/: Makefile  manage.py  wewear.db
backend/chat/: api.py  chatting.py  models.py  schemas.py  urls.py
backend/chat/migrations/: 0001_initial.py
backend/content/: admin.py  api.py  models.py  schemas.py
backend/content/migrations/: 0001_initial.py  0002_post_media_file_alter_post_media_url.py  0003_alter_post_caption.py  0004_alter_post_media_file.py  0005_impression_viewed_at_and_more.py  0006_post_ai_captioned.py
backend/core/: models.py
backend/core/migrations/: 0001_initial.py
backend/corns/: email_sender.py
backend/notifications/: admin.py  api.py  models.py  schemas.py
backend/notifications/migrations/: 0001_initial.py
backend/project/: asgi.py  env.py  forms.py  schemas.py  settings.py  urls.py
backend/search/: api.py  schemas.py
backend/templates/admin/: base_site.html
backend/users/: admin.py  api.py  auth.py  follow_api.py  models.py  schemas.py
backend/users/migrations/: 0001_initial.py  0002_theme_user_bio_user_body_type_user_full_name_and_more.py  0003_alter_theme_name_alter_user_bio_alter_user_full_name_and_more.py  0004_bodytype.py  0005_user_gender.py
backend/utils/: analyze_post.py  video.py
scraper/: .env  photo_descriptor.py  scrape_tiktok_videos.py  tiktok_downloader.py
test_stuffs/: chat_demo.py  cleanup_database.py  quick_interaction_test.py  simulate_users.py  test_api.py  test_chat_api.py  test_chat_complete.py  test_interactions.py
(+1 files in other folders)
